unpackaged/main/default/objects/CLT_EmailTemplateField__mdt/CLT_EmailTemplateField__mdt.object-meta.xml
<CustomObject>
    <label>CLT EmailTemplateField</label>
    <pluralLabel>CLT EmailTemplateFields</pluralLabel>
</CustomObject>