unpackaged/main/default/objects/CLT_EmailTemplateField__mdt/fields/AvailableForPersonalTemplates__c.field-meta.xml
<CustomField>
    <fullName>AvailableForPersonalTemplates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Personal Templates</label>
    <type>Checkbox</type>
</CustomField>