unpackaged/main/default/objects/CLT_EmailTemplateField__mdt/fields/FieldWrapperName__c.field-meta.xml
<CustomField>
    <fullName>FieldWrapperName__c</fullName>
    <label>Field Wrapper Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>