unpackaged/main/default/objects/CLT_EmailTemplateField__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Options: Client, UserDefault</description>
    <inlineHelpText>Options: Client, UserDefault</inlineHelpText>
    <label>Object</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>