unpackaged/main/default/objects/CLT_EmailTemplateField__mdt/fields/StringToReplace__c.field-meta.xml
<CustomField>
    <fullName>StringToReplace__c</fullName>
    <label>String To Replace</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>