unpackaged/main/default/objects/CLT_EmailTemplateField__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Object__c</columns>
    <columns>FieldWrapperName__c</columns>
    <columns>StringToReplace__c</columns>
    <columns>DeveloperName</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>